Fix dark background rendering over text on product cards